unified spacing, print media fixes

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -41,6 +41,8 @@
   --color-heading: var(--vt-c-text-light-2);
   --color-text: var(--vt-c-text-light-1);
   --color-icon: var(--color-border);
+
+  --section-spacing: 1.5rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -98,9 +100,18 @@ body {
     --color-icon: #666666;
   }
   html {
-    font-size: 10px;
+    font-size: 12px;
   }
   input {
     border: 0 !important;
+  }
+  section.health > header {
+    text-align: left;
+  }
+  .hide-print {
+    display: none !important;
+  }
+  .editable {
+    outline: 0;
   }
 }
